# neural_thingamajigy

./: .gitignore  Cargo.toml  README.md  check.sh  out.csv
crates/layer_chain/: Cargo.toml
crates/layer_chain/src/: lib.rs  network_impl.rs  random_impl.rs  trainable_impl.rs
crates/layer_chain/src/trainable_impl/: gradient.rs
crates/network_macro/: Cargo.toml
crates/network_macro/src/: lib.rs  random_impl.rs  trainable_impl.rs
crates/network_macro/src/trainable_impl/: gradient.rs
crates/neural_thingamajigy/: Cargo.toml
crates/neural_thingamajigy/examples/: xor.rs
crates/neural_thingamajigy/src/: activators.rs  chain.rs  layer.rs  lib.rs  network.rs  train.rs  valueset.rs
crates/neural_thingamajigy/src/layer/: layer_training.rs
crates/neural_thingamajigy/src/network/simple_network/: network_training.rs
crates/neural_thingamajigy/src/operations/: exp.rs  mod.rs  normalize.rs  softmax.rs
crates/neural_thingamajigy/src/train/: optimiser.rs
crates/neural_thingamajigy/tests/: improving.rs
examples/: xor.rs
src/: activator.rs  activators.rs  calculus_shenanigans.rs  layer.rs  layer_data.rs  lib.rs  network.rs  network_data.rs  train.rs  training_gradients.rs  valueset.rs
src/layer/: layer_data.rs  layer_training.rs
src/network/: network_data.rs  network_training.rs
src/network/simple_network/: gradient.rs  mod.rs  network_data.rs  network_training.rs
src/train/: loss.rs  optimiser.rs
tests/: improving.rs
