[package]
name = "neural_thingamajigy"
version = "0.2.0"
edition = "2021"

[features]
train = ["nalgebra/rand", "nalgebra/libm", "dep:rand"]
serde = ["dep:serde", "dep:serde_arrays", "nalgebra/serde-serialize-no-std"]

[dependencies]
nalgebra = {version="0.33.2", default-features=false}
rand = {version="0.8.5", optional=true}
serde = { version = "1.0.*", default-features = false, optional=true }
serde_arrays = { version = "0.1.0", optional=true }

[[example]]
name="xor"
required-features=["train"]