[package]
name = "network_macro"
version = "0.1.0"
edition = "2021"

[features]
serde = []

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
rand = {version = "0.8"} 
neural_thingamajigy = {path = "../neural_thingamajigy", features = ["train"]}
nalgebra = {version="0.33.2", default-features=false}


[lib]
proc-macro = true
